1.added login and registation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -441,6 +441,7 @@
     <string name="title_menu_timings">Timings</string>
     <string name="title_menu_account_settings">Account Settings</string>
     <string name="title_menu_logout">Logout</string>
+    <string name="update_save">SAVE</string>
 
 
     <!--Buy Request Screen-->
