--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="action_product_status">Is product delivered</string>
     <string name="action_description">Description</string>
     <string name="action_service_center_type">Service Center Type</string>
+    <string name="action_is_group">Is Group</string>
 
     <!--product Assign-->
     <string name="user_qr_code">User QR code</string>
