--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="action_description">Description</string>
     <string name="action_service_center_type">Service Center Type</string>
     <string name="action_is_group">Is Group</string>
+    <string name="action_is_admin">Is Admin</string>
 
     <!--product Assign-->
     <string name="user_qr_code">User QR code</string>
@@ -264,7 +265,10 @@
     <string name="error_Scan_start_on">Scan Start is required</string>
     <string name="error_Scan_end_on">Scan End is required</string>
     <string name="error_Service_Center_id">Service Center Id is required</string>
+    <string name="error_Service_Center_name">Service Center Name is required</string>
     <string name="error_service_center_role_id">Service Center Role Id is required</string>
+    <string name="error_service_center_desiganation">Service Center Desiganation is
+        required</string>
 
 
     <!-- progress messages -->
@@ -286,6 +290,8 @@
     <string name="progress_qr_code_product">Asign QR Code To Product...</string>
     <string name="progress_warranty_registering">Registering warranty...</string>
     <string name="progress_categories">Fetching categories...</string>
+    <string name="progress_adding_designation">Adding designation...</string>
+    <string name="progress_adding_user">Adding user...</string>
     <string name="progress_designations">Loading designations...</string>
     <string name="progress_add_new_model">Adding new model...</string>
     <string name="progress_product_details">Fetching product details...</string>
@@ -405,6 +411,7 @@
     <string name="register_country_hint">Country</string>
     <string name="register_city_hint">City</string>
     <string name="register__service_center_hint">Service Center Name</string>
+    <string name="register__service_center_designation_hint">Service Center Designation</string>
     <string name="user_name_hint">Name</string>
     <string name="user__hint">Name</string>
     <string name="user_contact_hint">Contact</string>
