--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="status_payment">Payment</string>
     <string name="status_feedback">Feedback</string>
     <string name="option_assign">Assign</string>
+    <string name="option_past_history">Past History</string>
 
 
 
@@ -453,6 +454,7 @@
     <string name="register_password_hint_unicode">&#9432;</string>
     <string name="register_timezone_why_unicode">\u003F</string>
     <string name="validating_code">validating code..</string>
+
 
 
     <!--google maps-->
