1. Before creating user, checks designations empty or not 2. Creating filters in status screen based on user level

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
         the below Button
     </string>
 
+    <string name="error_empty_designations">Before adding user, please add designations first</string>
     <string name="error_loading_categories">Unable to fetch categories</string>
     <string name="error_no_products_for_favorites">No products found to add favorites</string>
     <string name="info_purchased_status">Status: %1$s</string>
