--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="sample_text">Text</string>
 
-    <string name="msg_check_internet">Looks like you are offline, please check internet connectivity</string>
+    <string name="msg_check_internet">Looks like you are offline, please check internet
+        connectivity
+    </string>
 
     <!-- api error messages -->
     <string name="error_network">Api failed due to NetworkErrorException</string>
@@ -9,13 +11,16 @@
         the below Button
     </string>
 
-    <string name="error_empty_designations">Before adding user, please add designations first</string>
+    <string name="error_invalid_designation">Please select designation of admin type</string>
+    <string name="error_empty_designations">Before adding user, please add designations first
+    </string>
     <string name="error_loading_categories">Unable to fetch categories</string>
     <string name="error_no_products_for_favorites">No products found to add favorites</string>
     <string name="info_purchased_status">Status: %1$s</string>
     <string name="error_socket">Unable to process your request. Please try again</string>
     <string name="error_no_connectivity">Looks like you are offline, please check internet
-        connectivity</string>
+        connectivity
+    </string>
     <!-- bottom sheet options-->
     <string name="user_comment_hint">Comment</string>
     <string name="sample_test">Sample test</string>
@@ -24,7 +29,7 @@
     <string name="bottom_option_product">Product</string>
     <string name="bottom_option_service_center">Service center</string>
     <string name="bottom_option_status_update">Status update</string>
-    <string name="bottom_option_special_instructions">Special Instructions </string>
+    <string name="bottom_option_special_instructions">Special Instructions</string>
     <string name="bottom_option_how_to_use">How to use</string>
     <string name="bottom_option_description">Description:</string>
     <string name="product_specification">Product Specification:</string>
@@ -110,7 +115,8 @@
     <string name="action_qr_code">QR Code Scan</string>
     <string name="action_manual_entry">Manual Enter</string>
     <string name="dialog_warranty_registered_successfully">Warranty has been registered
-        successfully</string>
+        successfully
+    </string>
     <string name="action_product_status">Is product delivered</string>
     <string name="action_description">Description</string>
     <string name="action_service_center_type">Service Center Type</string>
@@ -128,7 +134,7 @@
     <string name="action_scanuid">Scan Product UID</string>
     <string name="action_entermobilenumber">Enter Mobile Number</string>
     <string name="title_user_qr_code">Place user qr code to scan</string>
-    <string name="title_warranty_serial_barcode">Place user  Serial no Barcode</string>
+    <string name="title_warranty_serial_barcode">Place user Serial no Barcode</string>
     <string name="title_warranty_batch_barcode">Place user Batch no Barcode</string>
     <string name="action_enter_transfer_phone_number">Transfer Phone number</string>
 
@@ -163,7 +169,9 @@
     <string name="action_register">Register</string>
     <string name="action_continue">continue</string>
     <string name="action_register_parentof_child">I am a parent of a child with asthma</string>
-    <string name="action_register_individual">I am an individual over the age of 16\n managing my own asthma</string>
+    <string name="action_register_individual">I am an individual over the age of 16\n managing my
+        own asthma
+    </string>
     <string name="action_verify">verify</string>
     <string name="action_view_full_library">View full library</string>
     <string name="action_done">Done</string>
@@ -180,7 +188,7 @@
     <string name="action_upload_new_plan">Upload new plan</string>
     <string name="action_why">Why?</string>
     <string name="action_send_verification_code">Send verification code</string>
-    <string name="action_hint"> Hint </string>
+    <string name="action_hint">Hint</string>
     <string name="action_update_pwd">Update Password</string>
     <string name="action_update">Update</string>
     <string name="action_feedback">Feedback</string>
@@ -198,7 +206,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_update_user_profile">UpDateUserProfile</string>
     <string name="action_update_store_profile">UpDateStoreProfile</string>
-    <string name="app_version">App Version: </string>
+    <string name="app_version">App Version:</string>
     <!--scan tap fragment-->
 
     <string name="action_scan_product_details">Product details</string>
@@ -208,7 +216,8 @@
     <!-- input error messages -->
     <string name="app_update">Please Update to continue using the App.</string>
     <string name="location_permission_msg">Please go to application settings and grant location
-        permission.</string>
+        permission.
+    </string>
     <string name="error_uuid">No data to generate qrcode</string>
     <string name="error_email_req">Email Address is required</string>
     <string name="error_created_date">Created Date is required</string>
@@ -220,20 +229,23 @@
     <string name="error_email_notvalid">Please enter valid email address</string>
     <string name="error_password_req">Password is required</string>
     <string name="error_re_enter_password_req">Password is required</string>
-    <string name="error_re_enter_password_does_not_match">Re-entered Password does not match</string>
-    <string name="error_password_pattern_req">A minimum of 8 characters and must include at least one number</string>
+    <string name="error_re_enter_password_does_not_match">Re-entered Password does not match
+    </string>
+    <string name="error_password_pattern_req">A minimum of 8 characters and must include at least
+        one number
+    </string>
     <string name="error_newpwd_req">New Password is required</string>
     <string name="error_confirmpwd_req">Confirm Password is required</string>
     <string name="error_pwd_notmatched">New and Confirm Password must match</string>
     <string name="error_name_req">Name is required</string>
-    <string name="error_service_center_name_req">Service Center Name  is required</string>
+    <string name="error_service_center_name_req">Service Center Name is required</string>
     <string name="error_desc_req">Description is required</string>
     <string name="error_firstname_req">First Name is required</string>
     <string name="error_lastname_req">Last Name is required</string>
     <string name="error_phone_req">Phone is required</string>
-    <string name="error_category_req"> Category is required</string>
-    <string name="error_division_req"> Division is required</string>
-    <string name="error_brand_req"> Brand is required</string>
+    <string name="error_category_req">Category is required</string>
+    <string name="error_division_req">Division is required</string>
+    <string name="error_brand_req">Brand is required</string>
     <string name="error_phone_min_digits">Phone number should be at least 10 digits</string>
     <string name="error_one_phone_req">Please enter a contact number</string>
     <string name="error_timezone_req">Time Zone is required</string>
@@ -243,7 +255,8 @@
     <string name="error_gender_req">Gender is required</string>
     <string name="error_verificationcode_req">Verification Code is required</string>
     <string name="error_dob_patient_is_user">You must be at least 16 years old to use the
-        Connect application</string>
+        Connect application
+    </string>
     <string name="error_dob_futuredate">You cannot select a future date</string>
     <string name="error_past_date">You cannot select a past date</string>
     <string name="error_email_inuse">Email address already in use</string>
@@ -288,23 +301,28 @@
     <string name="error_Service_Center_name">Service Center Name is required</string>
     <string name="error_service_center_role_id">Service Center Role Id is required</string>
     <string name="error_service_center_desiganation">Service Center Desiganation is
-        required</string>
+        required
+    </string>
 
 
     <!-- progress messages -->
 
     <string name="progress_addoffer_merchant_fragment">Loading AddOffer Merchant Fragment..
-        .</string>
+        .
+    </string>
     <string name="hint_warranty_period">Warranty expires in %1$d</string>
     <string name="progress_adding_to_favorites">Adding to favorites...</string>
     <string name="progress_purchased_history">Loading Purchased History...</string>
     <string name="progress_interest_history">Loading Interest History...</string>
     <string name="progress_buy_request_">Loading BuyRequest...</string>
     <string name="progress_fetch_new_service_request">Fetching New Service Request...</string>
-    <string name="progress_fetch_checkup_service_request">Fetching Checkup Service Request...</string>
+    <string name="progress_fetch_checkup_service_request">Fetching Checkup Service Request...
+    </string>
     <string name="progress_fetch_repair_service_request">Fetching Repair Service Request...</string>
-    <string name="progress_fetch_payment_service_request">Fetching Payment Service Request...</string>
-    <string name="progress_fetch_approval_service_request">Fetching Approval Service Request...</string>
+    <string name="progress_fetch_payment_service_request">Fetching Payment Service Request...
+    </string>
+    <string name="progress_fetch_approval_service_request">Fetching Approval Service Request...
+    </string>
     <string name="progress_return_history">Loading Return History...</string>
     <string name="progress_buy_request">Loading Buy Request...</string>
     <string name="progress_get_addresses">Loading Address...</string>
@@ -318,7 +336,9 @@
     <string name="progress_adding_designation">Adding designation...</string>
     <string name="progress_adding_user">Adding user...</string>
     <string name="progress_loading_service_centers">Loading service centers...</string>
-    <string name="progress_loading_users_list_of_service_centers">Loading users list of service centers...</string>
+    <string name="progress_loading_users_list_of_service_centers">Loading users list of service
+        centers...
+    </string>
     <string name="progress_loading_data">Loading data...</string>
     <string name="progress_adding_service_center">Adding service center...</string>
     <string name="progress_designations">Loading designations...</string>
@@ -367,10 +387,17 @@
     <string name="progress_send_summary_report">Sending summary report...</string>
 
     <!-- Dialog -->
-    <string name="dialog_profile_creation_completed">Registration and profile creation\n completed successfully.</string>
+    <string name="dialog_profile_creation_completed">Registration and profile creation\n completed
+        successfully.
+    </string>
     <string name="dialog_warning_title">Warning</string>
-    <string name="dialog_warning_message">Sensor Calibration with ocpied bed not successfully completed. It is highly recomended that you complete calibration. Calibration can be automatically performaed during notmal sleep but data collection will be delayed.</string>
-    <string name="dialog_verify_title">Please enter the verification code which\n was sent to %1$s.</string>
+    <string name="dialog_warning_message">Sensor Calibration with ocpied bed not successfully
+        completed. It is highly recomended that you complete calibration. Calibration can be
+        automatically performaed during notmal sleep but data collection will be delayed.
+    </string>
+    <string name="dialog_verify_title">Please enter the verification code which\n was sent to
+        %1$s.
+    </string>
     <string name="dialog_notes_buyRequest">Please Enter The Notes</string>
     <string name="dialog_logout">Are you sure you want to logout?</string>
     <string name="dialog_delete">Are you sure you want to delete?</string>
@@ -380,9 +407,11 @@
     <string name="login_password_hint">Password</string>
     <string name="login_forgotpassword_title">Forgot Password?</string>
     <string name="login_password_confirm_msg">You will receive an OTP with a temporary password
-        .</string>
+        .
+    </string>
     <string name="login_forgotpassword_enter_phone_number">Enter your phoneNumber and we will send
-        you a one-time password to use in resetting it.</string>
+        you a one-time password to use in resetting it.
+    </string>
     <string name="forgot_password_phone_number_hint">Registered Phone number</string>
 
     <!-- change password -->
@@ -395,8 +424,8 @@
     <!--Add new Model-->
     <string name="add_new_submit">SUBMIT</string>
     <string name="add_new__model_no">Model No</string>
-    <string name="add_new__price">Price </string>
-    <string name="add_new__mrp_price">MRP Price </string>
+    <string name="add_new__price">Price</string>
+    <string name="add_new__mrp_price">MRP Price</string>
     <string name="add_new__batch_no">Batch No</string>
     <string name="add_new__serial_no">Serial No</string>
     <string name="add_new__category">Category</string>
@@ -407,7 +436,9 @@
 
     <!-- Registration -->
     <string name="register_userinfo_title">User Information</string>
-    <string name="register_userinfo_subtitle">Please enter information for the person who will be using the app.</string>
+    <string name="register_userinfo_subtitle">Please enter information for the person who will be
+        using the app.
+    </string>
     <string name="register_store_info_title">Store Information</string>
     <string name="register_service_center_info_title">Service Center Information</string>
     <string name="register_store_info_subtitle">Please enter store information</string>
@@ -421,7 +452,9 @@
     <string name="register_password_hint">Password</string>
     <string name="register_reenter_password_hint">Re-enter Password</string>
     <string name="register_patientinfo_title">Person with asthma</string>
-    <string name="register_patientinfo_subtitle">Please enter information for the person with asthma\n who will be monitored.</string>
+    <string name="register_patientinfo_subtitle">Please enter information for the person with
+        asthma\n who will be monitored.
+    </string>
     <string name="register_phone_type">Type</string>
     <string name="register_timezone_hint">Time Zone</string>
     <string name="register_zipcode_hint">Zip Code</string>
@@ -450,10 +483,13 @@
     <string name="register_verify_email_hint">Verification Code</string>
     <string name="enter_note">Enter Note</string>
     <string name="register_hint_password">Minimum 8 characters with least one number</string>
-    <string name="register_why_timezone">Knowing your time zone is important so we can send notifications and schedule phone calls at the right times of day.</string>
+    <string name="register_why_timezone">Knowing your time zone is important so we can send
+        notifications and schedule phone calls at the right times of day.
+    </string>
     <string name="register_why_zip_code">The zip code and timezone of the person with asthma and
         sensor are
-        important for the Tueo Health analytics to function optimally</string>
+        important for the Tueo Health analytics to function optimally
+    </string>
     <string name="register_password_hint_unicode">&#9432;</string>
     <string name="register_timezone_why_unicode">\u003F</string>
     <string name="validating_code">validating code..</string>
@@ -508,7 +544,7 @@
     <string name="purchased_brand">Brand</string>
     <string name="purchased_product_image">Product Image</string>
     <string name="purchased_product_info">Product Info</string>
-    <string name="purchased_warranty_status_now">Warranty Status Now : </string>
+    <string name="purchased_warranty_status_now">Warranty Status Now :</string>
     <string name="purchased_purchased_date">Purchased Date :</string>
     <string name="purchased_warranty_covers_date">Warranty Covers :</string>
     <string name="purchased_warranty_ends_on">"Warranty Ends on :"</string>
