1.validations check is added to add service center, add user  and add designations classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -300,6 +300,7 @@
     <string name="error_Service_Center_id">Service Center Id is required</string>
     <string name="error_Service_Center_name">Service Center Name is required</string>
     <string name="error_service_center_role_id">Service Center Role Id is required</string>
+    <string name="error_service_center_reporting_person">Service Center Reporting Persong is required</string>
     <string name="error_service_center_desiganation">Service Center Desiganation is
         required
     </string>
