1.Added Edit Time Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,9 @@
     <string name="bottom_option_assign">Assign</string>
     <string name="bottom_option_details">Details</string>
     <string name="bottom_option_note">Note</string>
+    <string name="hint_time">Time</string>
+    <string name="hint_date">Date</string>
+    <string name="progress_finding_service_centers">Loading service centers...</string>
     <string name="bottom_option_main_features">Main Features :</string>
     <string name="bottom_option_warranty">Warranty :</string>
     <string name="bottom_option_warranty_details">Warranty details</string>
