--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,10 @@
     <string name="option_assign">Assign</string>
     <string name="option_past_history">Past History</string>
 
+    <!--service center time-->
+    <string name="time_10_12">10-12</string>
+    <string name="time_12_15">12-15</string>
+    <string name="time_15_17">15-17</string>
 
     <!--new request-->
     <string name="option_product_name">Product name</string>
