--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -350,6 +350,8 @@
     </string>
     <string name="progress_loading_data">Loading data...</string>
     <string name="progress_adding_service_center">Adding service center...</string>
+    <string name="progress_delete_service_center">Delect service center...</string>
+    <string name="progress_delete_user">Delect user..</string>
     <string name="progress_designations">Loading designations...</string>
     <string name="progress_add_new_model">Adding new model...</string>
     <string name="progress_product_details">Fetching product details...</string>
